making some tests about the p2, i think i've got the best style but need to update the picture to show every parts

--- a/assets/styles/style_destination.css
+++ b/assets/styles/style_destination.css
@@ -44,15 +44,18 @@ html, body {
   transform-origin: center center;
 }
 #bg-image1{
-    
     background-image: url("../images/destinations/blue.jpeg");
 }
 #bg-image2{
+
+    background-image: url("../images/destinations/darkgreen.png");
+}
+#bg-image3{
     background-image: url("../images/destinations/blue.jpeg");
-}#bg-image3{
+}
+#bg-image4{
     background-image: url("../images/destinations/blue.jpeg");
-}#bg-image4{
-    background-image: url("../images/destinations/blue.jpeg");
-}#bg-image5{
+}
+#bg-image5{
     background-image: url("../images/destinations/blue.jpeg");
 }
