--- a/assets/styles/style_destination.css
+++ b/assets/styles/style_destination.css
@@ -6,6 +6,7 @@ html, body {
   width: 100%;
   height: 100%;
   background-color: #0D0D12;
+  color: white
 }
 
 #background-image {
@@ -29,11 +30,14 @@ html, body {
     background-position: center;
 }
 
-#main-title {
-  color: white;
-  font-size: 3em;
-  text-align: center;
-  margin: 0;
-  padding: 0.5em;
-  z-index: 1;
+#content {
+    width: 100vw;
+    height: 90vh;
+    color: white;
+    text-align: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    z-index: 1; 
 }
