--- a/assets/styles/carousel.css
+++ b/assets/styles/carousel.css
@@ -20,8 +20,13 @@ body {
 .carousel-caption {
   bottom: 3rem;
   z-index: 10;
-  color: #fff;
-  text-shadow: 0 2px 6px rgba(0,0,0,0.6);
+  color: #ffffff;
+  text-shadow: 0 2px 6px rgba(0,0,0,50);
+}
+.read_easier {
+  padding: 2px 8px;
+  background: rgba(1, 1, 1, 0.3);
+  backdrop-filter: blur(1px);
 }
 
 /* Declare heights because of positioning of img element */
@@ -77,7 +82,7 @@ body {
   /* Bump up size of carousel content */
   .carousel-caption p {
     margin-bottom: 1.25rem;
-    font-size: 1.25rem;
+    font-size: 1.3rem;
     line-height: 1.4;
   }
 
@@ -94,6 +99,3 @@ body {
 
 /* CUSTOM STYLES
 -------------------------------------------------- */
-.imgimg {
-    background-color: lightblue;
-}
