complete the tracks page and add some style to the whole app

--- a/assets/styles/core.css
+++ b/assets/styles/core.css
@@ -1,8 +1,8 @@
-html {
+.main_menu {
     width: 100vw;
     display: flex;
     flex-direction: column;
-    background-color: bisque;
+    background-color: blanchedalmond;
 }
 
 
