--- a/assets/styles/carousel.css
+++ b/assets/styles/carousel.css
@@ -5,7 +5,7 @@
 body {
   padding-top: 3rem;
   padding-bottom: 3rem;
-  color: #5a5a5a;
+  
 }
 
 
@@ -100,3 +100,6 @@ body {
 
 /* CUSTOM STYLES
 -------------------------------------------------- */
+.card-body {
+    background-color: rgb(208, 192, 168);
+}
