--- a/assets/styles/style_destination.css
+++ b/assets/styles/style_destination.css
@@ -3,14 +3,13 @@ html, body {
   /* background-color: #0D0D12; */
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
   width: 100%;
   height: 100%;
   background-color: #0D0D12;
   color: white;
   font-family: "Playfair Display", serif;
   font-optical-sizing: auto;
-  /* font-weight: ; */
   font-style: normal;
 }
 
@@ -21,7 +20,7 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  /* overflow: hidden; */
   position: absolute;
   top: 0;
   left: 0;
@@ -29,8 +28,8 @@ html, body {
 }
 
 #frame {
-    width: 80vw;
-    height: 70vh;
+    width: 70vw;
+    height: 60vh;
     background-image: url('../images/destinations/frame.jpg');
     background-size: cover;
     background-position: center;
@@ -39,9 +38,9 @@ html, body {
 /* ============== LE CONTENU ============== */
 #content {
 
-    margin: 5vh 9vw;
+    margin: 7vh 9vw;
     width: 82vw;
-    height: 90vh;
+    height: 85vh;
     text-align: center;
     position: relative;
     display: flex;
@@ -64,7 +63,7 @@ html, body {
     justify-content: center;
     background: linear-gradient(180deg, #232330, #0D0D12 95%);
     position: relative;
-    color: #a8a8f0;
+    color: #d8d8f5;
 }
 
 a {
@@ -90,7 +89,7 @@ a {
   box-shadow:#eacea7 0px 0px 8px 2px;
 }
 #main-subtitle {
-  margin: 3rem 5rem -3rem ;
+  margin: 3rem 4.5rem ;
   padding: 1.3rem 1rem;
   border-radius: 100px;
 }
