--- a/assets/styles/style_destination.css
+++ b/assets/styles/style_destination.css
@@ -4,8 +4,8 @@ html, body {
   margin: 0;
   padding: 0;
   /* overflow: hidden; */
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: #0D0D12;
   color: white;
   font-family: "Playfair Display", serif;
@@ -36,20 +36,24 @@ html, body {
 }
 
 /* ============== LE CONTENU ============== */
+
+.content-container {
+  padding-top: 2rem;
+
+}
 #content {
 
     margin: 7vh 9vw;
-    width: 82vw;
-    height: 85vh;
+    width: 80vw;
+    height: 80vh;
     text-align: center;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    z-index: 1; 
 
 }
-  .title > *{
+.title > *{
     margin: 0;
     padding: 0;
   }
@@ -64,6 +68,8 @@ html, body {
     background: linear-gradient(180deg, #232330, #0D0D12 95%);
     position: relative;
     color: #d8d8f5;
+    font-size: larger;
+    font-weight: 600;
 }
 
 a {
