--- a/assets/styles/style_destination.css
+++ b/assets/styles/style_destination.css
@@ -38,11 +38,10 @@ html, body {
 /* ============== LE CONTENU ============== */
 
 .content-container {
-  padding-top: 2rem;
+  padding-top: 1.2rem;
 
 }
 #content {
-
     margin: 7vh 9vw;
     width: 80vw;
     height: 80vh;
@@ -57,6 +56,11 @@ html, body {
     margin: 0;
     padding: 0;
   }
+#main-destination {
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
 .content-box {
     background-color: rgba(51, 51, 51, 0.5);
     border: solid 2px #252535;
@@ -95,6 +99,7 @@ a {
   box-shadow:#eacea7 0px 0px 8px 2px;
 }
 #main-subtitle {
+  font-size: 1.7rem;
   margin: 3rem 4.5rem ;
   padding: 1.3rem 1rem;
   border-radius: 100px;
