update text size on the carrousel

--- a/assets/styles/carousel.css
+++ b/assets/styles/carousel.css
@@ -26,6 +26,7 @@ body {
 }
 .read_easier {
   padding: 2px 8px;
+  font-size: medium;
   background: rgba(1, 1, 1, 0.3);
   backdrop-filter: blur(1px);
 }
