--- a/assets/styles/carousel.css
+++ b/assets/styles/carousel.css
@@ -24,6 +24,11 @@ body {
   color: #ffffff;
   text-shadow: 0 2px 6px rgba(0,0,0,50);
 }
+
+.ltxt {
+  font-size: 1rem;
+}
+
 .read_easier {
   padding: 2px 8px;
   font-size: medium;
